# openWakeWord-Compact

./: README.md  pyproject.toml  setup.py
openwakeword/: __init__.py  model.py  utils.py
tests/: test_models.py
