[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=openwakeword --cov-report term-missing --flake8 --mypy --mypy-ignore-missing-imports"
flake8-max-line-length = "140"
testpaths = [
    "tests",
    "openwakeword"
]

[project]
name = "openwakeword-pruned"
version = "0.5.1"
authors = [
  { name="David Scripka" },
  { name="Siran Shen" },
]
description = "A pruned version of the open source framework 'openwakeword' by David Scripka"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/siranshen/openWakeWord-Pruned"